<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
    </group>

    <item android:title="@string/menu_gestion">
        <menu>
            <item
                android:id="@+id/nav_nuevo_pedido"
                android:icon="@drawable/ic_add_circle"
                android:title="@string/nuevo_pedido" />
            <item
                android:id="@+id/nav_ver_pedidos"
                android:icon="@drawable/ic_list"
                android:title="@string/ver_pedidos" />
            <item
                android:id="@+id/nav_calendario"
                android:icon="@drawable/ic_calendar"
                android:title="@string/calendario" />
            <item
                android:id="@+id/nav_clientes"
                android:icon="@drawable/ic_people"
                android:title="@string/clientes" />
        </menu>
    </item>

    <item android:title="@string/menu_finanzas">
        <menu>
            <item
                android:id="@+id/nav_gastos"
                android:icon="@drawable/ic_wallet"
                android:title="@string/gastos_title" />
            <item
                android:id="@+id/nav_reportes"
                android:icon="@drawable/ic_trending_up"
                android:title="@string/dashboard_reports" />
            <item
                android:id="@+id/nav_tarjetas"
                android:icon="@drawable/ic_credit_card"
                android:title="@string/tarjeta" />
        </menu>
    </item>

    <item android:title="@string/menu_sistema">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/configuracion" />
            <item
                android:id="@+id/nav_ayuda"
                android:icon="@drawable/ic_help"
                android:title="@string/ayuda" />
        </menu>
    </item>
</menu>